# try-pydantic

./: pyproject.toml
tests/: test_sample.py
try_pydantic/: sample.py
