[tool.poetry]
name = "try-pydantic"
version = "0.1.0"
description = "pydanticの素振り用プロジェクト"
authors = ["akitanak <akihito_tanaka@me.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "v1.6.1"
sqlalchemy = "^1.3.20"

[tool.poetry.dev-dependencies]
rope = "^0.18.0"
pytest = "^6.1.1"
mypy = "^0.790"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
